--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,6 +2,7 @@ $main-color: #1DBDB8;
 $red-color: #E95144;
 $gold-color: #F3BC48;
 $star-color: #FFCB23;
+$dark-blue: #0D2D4D;
 $dark-color: #1E1E1E;
 $link-color: #1E1E1E;
 $grey-color: #787878;  
