--- a/scss/_shared.scss
+++ b/scss/_shared.scss
@@ -47,6 +47,68 @@ ul {
     }
 }
 
+// Prices
+.price {
+    color: $grey-color;
+    font-size: .8em;
+    padding-bottom: .8em;
+
+    .old-price {
+        text-decoration: line-through;
+    }
+
+    .new-price {
+        color: $red-color;
+    }
+}
+
+// Color Buttons
+.colors {
+    display: flex;
+    padding: .8em 0;
+
+    .color-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 22px;
+        height: 22px;
+        border: 1px solid #777;
+        border-radius: 50%;
+        margin-right: .4em;
+
+        .color {
+            display: inline-block;
+            width: 19px;
+            height: 19px;
+            padding: .1em;
+            border: 1px solid #fff;
+            border-radius: 50%;
+        }
+
+        .dark {
+            background-color: #808080;
+        }
+
+        .red {
+            background-color: #F08080;
+        }
+
+        .beige {
+            background-color: #F5F5DC;
+        }
+
+        .white {
+            background-color: #fff;
+        }
+        
+        .green {
+            background-color: #8FBC8F;
+        }
+    }
+    
+}
+
 // Blog Page
 // Shared Setting
 .setting {
@@ -58,3 +120,4 @@ ul {
 .setting-header {
     font-size: 1.2em;
 }
+
