--- a/scss/style.scss
+++ b/scss/style.scss
@@ -445,7 +445,8 @@ html {
                         position: absolute;
                         top: 0;
                         left: 0;
-                        width: 300px;
+                        width: 100%;
+                        height: 100%;
                         opacity: 0;
                         transition: all .3s linear;
                     }
@@ -485,9 +486,11 @@ html {
                 }
 
                 .layer {
+                    display: flex;
                     position: absolute;
-                    left: 3.5em;
                     bottom: 9em;
+                    left: 15%;
+                    text-align: center;
                     opacity: 0;
                     transition: all .3s linear;
 
@@ -2490,6 +2493,37 @@ html {
                         .pass-link {
                             font-size: .7em;
                         }
+                    }
+                }
+            }
+        }
+
+        // Products 
+        #products {
+
+            .products-container {
+
+                .product {
+
+                    .product-img {
+                        width: 450px;
+
+                        a {
+
+                            .main-img {
+                                width: 100%;
+                                height: 100%;
+                            }
+
+                            .hover-img {
+                                width: 100%;
+                                height: 100%;
+                            }
+                        }
+                    }
+
+                    .layer {
+                        left: 25%;
                     }
                 }
             }
